mejoras importantes en general, pero podria incluir fallas en serial.

--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -164,7 +164,9 @@ console.log("ESto es historial"+JSON.stringify(mydata["historial"]));
       <div id="titulo_popup">BLOQUEADA</div>
       <div></div>
       <div></div>
-      <div class="texto_en_overlay"><p>Esta maquina esta bloqueada, no realizara ninguna operacion, hasta que sea desbloqueada desde la central</p></div>
+      <div class="texto_en_overlay">
+        <p>Esta maquina esta bloqueada, no realizara ninguna operacion, hasta que sea desbloqueada desde la central</p>
+      </div>
       <div></div>
       <div></div>
       <div class="tbm_status">
@@ -172,13 +174,13 @@ console.log("ESto es historial"+JSON.stringify(mydata["historial"]));
       </div>
       <div></div>
       <div></div>
-      <div><img  src="img/tbm_offline.png" alt="tbm_status" width="100" height="100"></div>
+      <div><img src="img/tbm_offline.png" alt="tbm_status" width="100" height="100"></div>
       <div></div>
       <div></div>
       <div id="Check-In"><a class="ec_btn">Check in to TBM</a></div>
       <!-- <div><a class="btn" style="width:120px;" id="opc1">Opcion1</a></div> -->
       <!-- <div><a class="btn" style="width:120px;" id="testy">Cerrar</a></div> -->
     </div>
-    </div>
+  </div>
 </div>
- <!-- </div> -->
+<!-- </div> -->
