limpiando versiones, todos a una misma linea.

--- a/src/nueva_remesa_paso_2.html
+++ b/src/nueva_remesa_paso_2.html
@@ -1,3 +1,4 @@
+<!-- FIle not in use -->
 <script type="text/javascript">
 $(document).ready(function() {
 
@@ -12,7 +13,7 @@ $(document).ready(function() {
   <div class="wrapper">
     <div class="titulo">
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
-      <div id="message2">Ingrese el dinero</div>
+      <div id="message2">Ingrese el Dinero</div>
       <div></div>
     </div>
 
@@ -23,7 +24,7 @@ $(document).ready(function() {
         <div></div>
         <div>
           <div id="currency_val" class="depositado"style="float:left;"></div><div id="depositado"style="float:initial;">0.00</div>
-          <div style="font-size:28px;">Billetes Leidos:</div><div id="qty_bill" style="font-size:28px;">0</div>
+          <div style="font-size:28px;">Billetes detectados:</div><div id="qty_bill" style="font-size:28px;">0</div>
 
         </div>
         <!-- </div> -->
