--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -173,6 +173,7 @@
       <div><a class="ec_btn" id="close_serial_port">cerrar puerto serial</a> </div>
       <div><a class="ec_btn" id="open_serial_port">abrir puerto serial</a> </div>
       <div><a class="ec_btn" id="initialize_validator">inicializar validador</a> </div>
+      <div><a class="ec_btn" id="send_synch">send synch serialport</a> </div>
 
     </div>
     <div class="ec_card2 resumen2">
