--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -33,7 +33,11 @@
    $('#tienda_id').text(mydata["this_machine_info"][0].tienda_id);
    $('#public_machine_ip').text(mydata["this_machine_info"][0].public_machine_ip);
    // $('#overlay, #overlay-back').fadeOut(500);
-   console.log("ESto es historial" + JSON.stringify(mydata["historial"]));
+   //console.log("ESto es historial" + JSON.stringify(mydata["historial"]));
+   //console.log("ESto es historial" + mydata["historial"]);
+   // console.log( mydata["historial"]);
+
+
    //  var no_rhs=0;
    // forEach((mydata["historial"]), i) => {
    //   //  no_rhs=no_rhs+1;
@@ -55,9 +59,9 @@
 
    $.each(mydata["historial"], function(index, value) {
      var monto_formateado = addCommas(value["monto"]);
-     console.log(index + ": " + value["tebs_barcode"] + " con monto de :S/" + value["monto"] + " con fecha de :" + value["fecha"] + " con hora de :" + value["hora"]);
+    // console.log(index + ": " + value["tebs_barcode"] + " con monto de :S/" + value["monto"] + " con fecha de :" + value["fecha"] + " con hora de :" + value["hora"]);
      if (value["status"] == "iniciada") {
-       document.getElementById("lista_remesas_hermesx").innerHTML = "";
+    //   document.getElementById("lista_remesas_hermesx").innerHTML = "";
        $(".lista_remesas_hermes").append("<div class='ec_panel_tarjeta_historial_remesa_hermes_verde'><div class='label_tebs'>TebsBarcode:</div><div class='numero_de_tebs'>" + value["tebs_barcode"] +
          "</div><div class='label_status'>Status</div><div class='status'>" + value["status"] + "</div><div class='label_fecha_creacion'>fecha creacion</div><div class='fecha_creacion'>" + value["ts_inicio"] +
          "</div><div class='label_fecha_cierre'>fecha cierre</div><div class='fecha_cierre'>" + value["ts_fin"] + "</div><div class='label_moneda'>" + value["moneda"] + "</div><div class='label_monto'>" + monto_formateado +
@@ -75,9 +79,9 @@
 
    $.each(mydata["remesas_from_this_tebsbarcode"], function(index, value) {
      var monto_formateado = addCommas(value["monto"]);
-     console.log(index + ": " + value["tebs_barcode"] + " con monto de :S/" + value["monto"] + " con fecha de :" + value["fecha"] + " con hora de :" + value["hora"]);
+  //   console.log(index + ": " + value["tebs_barcode"] + " con monto de :S/" + value["monto"] + " con fecha de :" + value["fecha"] + " con hora de :" + value["hora"]);
      if (value["status"] == "terminado" & value["tipo"] == "ingreso") {
-       console.log("detectando remesa terminada");
+  //     console.log("detectando remesa terminada");
 
        $(".lista_remesas").append("<div class='ec_panel_tarjeta_historial_verde'><div class='label_no_remesa'># Remesa:</div><div class='no_remesa'>" + value["no_remesa"] + "</div><div class='label_tipo'>Tipo:</div><div class='tipo'>" +
          value["tipo"] + "</div><div class='label_tebs'>TebsBarcode</div><div class='numero_de_tebs'>" + value["tebs_barcode"] + "</div><div class='label_status'>Status</div><div class='status'>" + value["status"] +
@@ -171,7 +175,7 @@
     </div>
     <div class="ec_card panel2">
       <div><a class="ec_btn" id="socket_to_tbm">send socket to TBM</a> </div>
-      <div><a class="ec_btn" id="synch_remesas">synch Remesas</a> </div>
+      <div><a class="ec_btn" id="orden_sync">Orden Sync</a> </div>
       <div><a class="ec_btn" id="lock_machine">Lock Machine</a> </div>
       <div><a class="ec_btn" id="close_serial_port">cerrar puerto serial</a> </div>
       <div><a class="ec_btn" id="open_serial_port">abrir puerto serial</a> </div>
