ready for store

--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -164,23 +164,44 @@
       <p>fin de la lista</p>
     </div>
     <div class="ec_card panel1">
-      <div id="message2"></div>
-      <div><a class="ec_btn" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
-      <div><a class="ec_btn" id="pay_a_20">Pay a 20</a> </div>
-      <div><a class="ec_btn" id="pay_a_50">Pay a 50</a> </div>
-      <div><a class="ec_btn" id="pay_a_100">Pay a 100</a></div>
+      <div class="ventanita_log">
+        <ul id="message2"></ul>
+      </div>
+      <div class="botonera">
+        <div><a class="ec_btn" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
+        <div><a class="ec_btn" id="pay_a_10">Pay a 10</a> </div>
+        <div><a class="ec_btn" id="pay_a_20">Pay a 20</a> </div>
+        <div><a class="ec_btn" id="pay_a_50">Pay a 50</a> </div>
+        <div><a class="ec_btn" id="pay_a_60">Pay a 60</a> </div>
+        <div><a class="ec_btn" id="pay_a_100">Pay a 100</a></div>
+        <div><a class="ec_btn" id="pay_a_100">Pay a 200</a></div>
+      </div>
+
+
 
       <!-- <div><a class="ec_btn" id="read_new_tebs">read_new_tebs</a> </div> -->
 
     </div>
     <div class="ec_card panel2">
-      <div><a class="ec_btn" id="socket_to_tbm">send socket to TBM</a> </div>
-      <div><a class="ec_btn" id="orden_sync">Orden Sync</a> </div>
-      <div><a class="ec_btn" id="lock_machine">Lock Machine</a> </div>
-      <div><a class="ec_btn" id="close_serial_port">cerrar puerto serial</a> </div>
-      <div><a class="ec_btn" id="open_serial_port">abrir puerto serial</a> </div>
-      <div><a class="ec_btn" id="initialize_validator">inicializar validador</a> </div>
-      <div><a class="ec_btn" id="send_synch">send synch serialport</a> </div>
+      <div><a class="ec_btn_new" id="socket_to_tbm">Send Socket to TBM</a> </div>
+      <div><a class="ec_btn_new" id="orden_sync">Orden Sync</a> </div>
+      <div><a class="ec_btn_new" id="lock_machine">Lock Machine</a> </div>
+      <div><a class="ec_btn_new" id="close_serial_port">Cerrar Puerto Serial</a> </div>
+      <div><a class="ec_btn_new" id="open_serial_port">Abrir Puerto Serial</a> </div>
+      <div><a class="ec_btn_new" id="initialize_validator">Inicializar Validador</a> </div>
+      <div><a class="ec_btn_new" id="send_synch">Synch</a> </div>
+      <div><a class="ec_btn_new" id="send_enable_from_ui">Enable Validator</a> </div>
+      <div><a class="ec_btn_new" id="send_desable_from_ui">Disable Validator</a> </div>
+      <div><a class="ec_btn_new" id="send_all_levels_from_ui">Get All Levels </a> </div>
+      <div><a class="ec_btn_new" id="encripted_poll">encripted poll </a> </div>
+      <div><a class="ec_btn_new" id="reset_from_ui">reset </a> </div>
+      <div><a class="ec_btn_new" id="stop_polling_from_ui">stop pooling </a> </div>
+      <div><a class="ec_btn_new" id="online_from_ui">send onlineto tbm </a> </div>
+
+
+
+
+
 
     </div>
     <div class="ec_card2 resumen2">
