agregando inicio de software update.

--- a/src/system/configuracion.html
+++ b/src/system/configuracion.html
@@ -22,5 +22,8 @@
       <div class="ec_btn btn_grupo4" id='cifras_generales'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
       <div class="ec_btn btn_grupo4" id='remesa_hermes'><i class="fas fa-money-bill-alt fa-4x"></i>Remesa Hermes</div>
       <div class="ec_btn btn_grupo4" id='info'><i class="fas fa-info fa-4x"></i>Información General</div>
+      <!-- <div class="ec_btn btn_grupo4" id='info'><i class="fas fa-info fa-4x"></i>Información General</div> -->
+      <div class="ec_btn btn_grupo4" id='software_udpate'><i class="fas fa-sync-alt fa-3x"></i>software Update</div>
+      <div class="ec_btn btn_grupo4" id='remote_sync'><i class="fas fa-recycle fa-3x"></i>Remote Sync</div>
     </div>
   </div>
